--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 									</span>
 								</p>
 								<p class="text">
-									· 남경환 금융 자산 운용가 <br>
+									남경환 <br>
+									· 금융 자산 운용가 <br>
 									· 서울대학교 경제학 석사
 								</p>
 							</div>
